everything working and aligned. small issues with the scrollspy not applying an active class to my links on the page as it scrols down, and still linking to 20px too low.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+	position:  relative;
+}
+
 .jumbotron {
 	height: 400px;
 	margin-top: 40px;
@@ -47,7 +51,8 @@ img.card-img-top {
 
 #section3 {
 	width: 100%;
-	height: 500px;
+	height: 640px;
+	padding-top: 1px;
 	background-image: url('pictures/ocean.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -60,6 +65,7 @@ img.card-img-top {
 	border-radius: 2px;
 	margin-left:  auto;
 	margin-right:  auto;
+	margin-top: 240px;
 	color: black;
 	text-align: center;
 }
